Added play/pause icon. Started UI for player controls

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@ $secondary-color: #FF5722;
 @import '../../node_modules/vue-material/dist/vue-material';
 @import 'recorder';
 @import 'transitions';
+@import 'audio-list';
 
 *{
   box-sizing: border-box;
