:tada: initial working app :tada:
changes
- create useAudioEngine hook. it handles audio recording/play state.
  it also exposes controls for playing and recording, and the track list
- hook up App to useAudioEngine
- add date-fns for formatting

known issues
- there seems to be an off-by-one error.
  the first recording fails to play, and subsequent recordings
  play the audio from the previous recording

--- a/src/components/TrackList.css
+++ b/src/components/TrackList.css
@@ -6,5 +6,11 @@ ol {
 
 li {
   border-bottom: 1px solid var(--c-border);
+  cursor: pointer;
   padding: 24px;
+  transition: 100ms background-color var(--snappy);
+}
+
+li:hover {
+  background: #131313;
 }
