add styles for track metadata

--- a/src/components/TrackList.scss
+++ b/src/components/TrackList.scss
@@ -13,4 +13,13 @@
   li:hover {
     background: #131313;
   }
+
+  .track-duration {
+    font-size: 16px;
+  }
+
+  .track-title {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
 }
