--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,42 @@
+@keyframes slidein {
+  from {
+    opacity: 0;
+    transform: translateY(6px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes pulse {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 :root {
+  --c-active: rgb(25, 141, 207);
   --c-bg: #111;
   --c-border: #444;
+  --c-hover: #131313;
+  --c-selected: #191919;
+  --c-text: #fff;
+  --c-theme: rgb(246, 47, 47);
   /* TODO: Make this a little better */
   --snappy: cubic-bezier(0.65, 0, 0.45, 1);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --c-bg: #fff;
+    --c-border: #ccc;
+    --c-text: #111;
+    --c-theme: rgb(255, 91, 91);
+  }
 }
 
 html,
@@ -10,7 +44,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   background: var(--c-bg);
-  color: #fff;
+  color: var(--c-text);
   font-family: 'Roboto', 'Helvetica Neue', arial, sans-serif;
   font-weight: 400;
   height: 100%;
@@ -25,11 +59,13 @@ body {
 
 button.record {
   --spacing: 24px;
-  background: rgb(246, 47, 47);
+  background: var(--c-theme);
   border: 0;
   border-radius: 50%;
+  bottom: var(--spacing);
   box-shadow: 0 14px 28px rgba(40, 0, 0, 0.25), 0 10px 10px rgba(40, 0, 0, 0.22);
   cursor: pointer;
+  display: grid;
   /**
    * Specific characters are requested from Google Fonts
    * to reduce the font file size.
@@ -40,8 +76,8 @@ button.record {
   font-family: 'Cousine', sans-serif;
   font-size: 20px;
   height: 110px;
+  place-items: center;
   position: fixed;
-  bottom: var(--spacing);
   right: var(--spacing);
   text-transform: uppercase;
   transition: 100ms background-color var(--snappy);
@@ -50,6 +86,35 @@ button.record {
 
 button.record:hover {
   background: rgb(246, 30, 30);
+}
+
+button.record div {
+  color: var(--c-text);
+  font-size: 14px;
+  pointer-events: none;
+  position: absolute;
+  top: -32px;
+}
+
+button.record .recording {
+  animation: 160ms slidein ease-out;
+  align-items: baseline;
+  display: flex;
+}
+
+button.record .waiting {
+}
+
+div.recording::after {
+  animation: 500ms 160ms pulse infinite ease-in-out alternate forwards;
+  background: var(--c-theme);
+  border-radius: 50%;
+  content: '';
+  height: 6px;
+  margin-left: 9px;
+  opacity: 0;
+  position: relative;
+  width: 6px;
 }
 
 p {
