--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
   --c-selected: #191919;
   --c-text: #fff;
   --c-theme: rgb(246, 47, 47);
+  --f-ui: 'Roboto', 'Helvetica Neue', arial, sans-serif;
+  --f-accent: 'Cousine', sans-serif;
   /* TODO: Make this a little better */
   --snappy: cubic-bezier(0.65, 0, 0.45, 1);
 }
@@ -34,7 +36,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background: var(--c-bg);
   color: var(--c-text);
-  font-family: 'Roboto', 'Helvetica Neue', arial, sans-serif;
+  font-family: var(--f-ui);
   font-weight: 400;
   height: 100%;
   margin: 0;
@@ -55,14 +57,7 @@ button.record {
   box-shadow: 0 14px 28px rgba(40, 0, 0, 0.25), 0 10px 10px rgba(40, 0, 0, 0.22);
   cursor: pointer;
   display: grid;
-  /**
-   * Specific characters are requested from Google Fonts
-   * to reduce the font file size.
-   * If the text in this button is changed,
-   * make sure the `link` tag that loads this font
-   * in `index.html` is updated with the new characters
-   */
-  font-family: 'Cousine', sans-serif;
+  font-family: var(--f-accent);
   font-size: 20px;
   height: 110px;
   padding: 0;
