--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,22 @@ div.recording::after {
 p {
   margin: 0;
 }
+
+.search {
+  background: #090909;
+  border: 0;
+  border-radius: 19px;
+  caret-color: currentColor;
+  color: #eee;
+  font-family: var(--f-ui);
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  margin: 24px;
+  height: 38px;
+  padding: 19px;
+  width: calc(100% - 52px);
+}
+
+.search::placeholder {
+  color: #ddd;
+}
