--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --c-bg: #111;
   --c-border: #444;
   --c-hover: #131313;
+  --c-icon: #eee;
   --c-selected: #191919;
   --c-text: #fff;
   --c-theme: rgb(246, 47, 47);
